@@ -1,31 +1,31 @@
 Application: PDF Split and Merge enanched
 
-Version: 1.2.0e beta
+Version: 1.3.0e beta
 
 Author: Andrea Vacondio <andrea.vacondio@gmail.com>
 
 License: GPL
 
 Plugins included:
-	-pdfsam-merge-0.4.7e *
-	-pdfsam-split-0.2.9e *
-	-pdfsam-encrypt-0.1.4e *
-	-pdfsam-mix-0.0.6e *
-	-pdfsam-cover-0.1.4e *
+	-pdfsam-merge-0.4.9e *
+	-pdfsam-split-0.3.0e *
+	-pdfsam-encrypt-0.1.5e *
+	-pdfsam-mix-0.0.7e *
+	-pdfsam-cover-0.1.5e *
 
 Linked libraries:
-	-itext-1.4.8
+	-itext-2.0.2
 	-jcmdline-1.0.3
 	-looks-2.1.1
 	-jaxen-1.1
 	-dom4j-1.6.1
-	-pdfsam-console-0.7.1e *
+	-pdfsam-console-0.8.0e *
 	-pdfsam-langpack *
 	
 Note: This is a test version and many fixes have to be done. PDF Split and Merge comes with ABSOLUTELY NO WARRANTY;
 see the file license.txt for details.
 
-Installation: Unzip the archive into a directory. Double click pdfsam-1.2.0e-beta.jar or open a console a type the command
+Installation: Unzip the archive into a directory. Double click pdfsam-1.3.0e-beta.jar or open a console a type the command
 "java -jar /pathwhereyouunzipped/pdfsam-1.2.0e-beta.jar"
 
 Prerequisites: A working Java Runtime Environment is needed. This software has been tested on 
