@@ -163,10 +163,10 @@ public class JInfoPanel extends AbstractPlugIn{
 	}
 
     protected String getThanksText(){
-        String[] translators = new String[]{"Nicolas Le Novere (donor)", "Elisa Bortolotti (donor/graphics)", "Robin de Groot (donor)", "wonder (tester/developer)", "Aniket Dutta (contributor)", "Lucien  (donor)", "pinyotae (donor)"};
+        String[] contributors = new String[]{"SourceForge", "Freshmeat", "Launchpad", "Rosetta translators", "Ubuntu", "iText", "GNU", "OpenOffice", "jcmdline", "JGoodies", "David Vignoni", "Eclipse", "Xenoage Software", "Elisa Bortolotti", "dom4j", "jaxen", "All the donors and contributors"};
         String log_text = GettextResource.gettext(i18n_messages,"Contributes: ");
-        for (int i=0; i<translators.length; i++){
-            log_text += translators[i]+" - ";
+        for (int i=0; i<contributors.length; i++){
+            log_text += contributors[i]+" - ";
         }
         return log_text;
     }
